...
    @try {
        if([[GAI sharedInstance]optOut] == NO){
            
            // send google analytics info about which type of search being performed
            id<GAITracker> tracker = [[GAI sharedInstance] defaultTracker];
            
            [tracker set:kGAIScreenName value:@"Search"];
            [tracker send:[[GAIDictionaryBuilder createEventWithCategory:category
                                                                  action:action
                                                                   label:label
                                                                   value:nil] build]];
            [tracker set:kGAIScreenName value:nil];
        }
...
