...
        [items addObject:self.prevButton];
    }
    
    // next button
    if (act2 != nil) {
        self.nextButton = [[UIBarButtonItem alloc]
                           initWithImage:[UIImage imageNamed:@"NextIcon"]
                           style:UIBarButtonItemStylePlain
                           target:self
                           action:act2];
        [items addObject:self.nextButton];

    }
...
